# Hazel

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
doc/: learnMain.md
doc/render/: render_architecture.md  render_buffer.md  render_camera.md  render_draw_call.md  render_frame_buffers.md  render_head.md  render_materials.md  render_model_transform.md  render_renderer2d.md  render_shader.md  render_texture.md  render_vertex_array.md
hazel/: CMakeLists.txt
hazel-editor/: CMakeLists.txt
hazel-editor/assets/scenes/: Cub.hazel  Example.hazel  圆模拟.hazel  物理模拟.hazel
hazel-editor/assets/shaders/: texture.glsl
hazel-editor/src/: editor_app.cpp  editor_layer.cpp  editor_layer.h
hazel-editor/src/Panels/: content_browser_panel.cpp  content_browser_panel.h  scene_hierarchy_panel.cpp  scene_hierarchy_panel.h
hazel/src/: hazel.h  hzpch.cpp  hzpch.h  test.cpp  test.h
hazel/src/Hazel/: application.cpp  application.h  core.h  entryPoint.h  input.h  layer.h  layer_stack.cpp  layer_stack.h  log.cpp  log.h  window.h
hazel/src/Hazel/Core/: application.cpp  application.h  base.h  core.h  entry_point.h  input.h  input_codes.h  layer.cpp  layer.h  layer_stack.cpp  layer_stack.h  log.h  timer.h  timestep.h  uuid.cpp  uuid.h  window.h
hazel/src/Hazel/Debug/: instrumentor.h
hazel/src/Hazel/Events/: application_event.h  event.h  key_event.h  mouse_event.h
hazel/src/Hazel/ImGui/: imgui_build.cpp  imgui_layer.cpp  imgui_layer.h
hazel/src/Hazel/Math/: math.cpp  math.h
hazel/src/Hazel/Renderer/: buffer.cpp  buffer.h  camera.h  editor_camera.cpp  editor_camera.h  framebuffer.cpp  framebuffer.h  graphics_context.h  ortho_graphic_camera.cpp  ortho_graphic_camera.h  ortho_graphic_camera_controller.cpp  ortho_graphic_camera_controller.h  renderer.cpp  renderer.h  renderer_2d.cpp  renderer_2d.h  renderer_api.cpp  renderer_api.h  renderer_command.cpp  renderer_command.h  shader.cpp  shader.h  texture.cpp  texture.h  uniform_buffer.cpp  uniform_buffer.h  vertex_array.cpp  vertex_array.h
hazel/src/Hazel/Scene/: components.h  entity.cpp  entity.h  scene.cpp  scene.h  scene_camera.cpp  scene_camera.h  scene_serializer.cpp  scene_serializer.h  scriptable_entity.h
hazel/src/Hazel/Utils/: platform_utils.h
hazel/src/PlatForm/OpenGL/: imgui_impl_opengl3.cpp  imgui_impl_opengl3_loader.h  opengl_buffer.cpp  opengl_buffer.h  opengl_context.cpp  opengl_context.h  opengl_framebuffer.cpp  opengl_framebuffer.h  opengl_renderer_api.cpp  opengl_renderer_api.h  opengl_shader.cpp  opengl_shader.h  opengl_texture2d.cpp  opengl_texture2d.h  opengl_uniform_buffer.cpp  opengl_uniform_buffer.h  opengl_vertex_array.cpp  opengl_vertex_array.h
hazel/src/PlatForm/Windows/: windows_input.cpp  windows_input.h  windows_utils.cpp  windows_window.cpp  windows_window.h
sandbox/: CMakeLists.txt
sandbox/assets/shaders/: flatColor.glsl  texture.glsl
sandbox/src/: main.cpp  particle_system.cpp  particle_system.h  random.cpp  random.h  sandboxApp.cpp  sandbox_2d.cpp  sandbox_2d.h
scripts/: SetupVulkan.py
